--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,12 @@
+
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
 }
 
 android {
+
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
@@ -16,9 +19,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    dataBinding {
+    buildFeatures{
         //noinspection DataBindingWithoutKapt
-        enabled = true
+        dataBinding = true // for data binding
+        viewBinding = true // for view binding
     }
 
     buildTypes {
@@ -32,11 +36,28 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget =  JavaVersion.VERSION_1_8.toString()
     }
+
+
+
 }
 
 dependencies {
+
+    //rating star
+    implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
+
+    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
+    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
+
+    //recycler view
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    //expandable text view
+    implementation 'com.ms-square:expandableTextView:0.1.4'
+
+    //bottom navbar
+    implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.6'
 
     //progress button
     implementation 'com.github.StevenDXC:DxLoadingButton:2.4'
@@ -44,14 +65,13 @@ dependencies {
     //dropdown list
     implementation 'com.github.skydoves:powerspinner:1.1.7'
 
-    implementation 'androidx.fragment:fragment-ktx:1.3.0-rc02'
-    implementation "androidx.fragment:fragment-ktx:1.3.0-rc02"
-    implementation "android.arch.navigation:navigation-fragment:$navigationVersion"
-    implementation "android.arch.navigation:navigation-ui:$navigationVersion"
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+    //implementation "android.arch.navigation:navigation-fragment:$navigationVersion"
+    //implementation "android.arch.navigation:navigation-ui:$navigationVersion"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -62,7 +82,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-
 
 }
