--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
-    ext.kotlin_version = "1.4.30"
-    ext.navigationVersion = '1.0.0-rc02'
+
+    ext{
+        kotlin_version = "1.4.30"
+        navigationVersion = '2.1.0-alpha06'
+        version_retrofit = "2.9.0"
+        version_retrofit_coroutines_adapter = "0.9.2"
+    }
 
     repositories {
         google()
         jcenter()
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,6 +28,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+
         maven { url 'https://jitpack.io' }
     }
 }
