--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.findyourapplication">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FindYourApplication">
-        <activity android:name=".EmployeeActivity"></activity>
+        <activity android:name=".EmployerActivity"></activity>
+        <activity android:name=".EmployeeActivity" />
         <activity android:name=".LoginSignupActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
