--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         navigationVersion = '2.1.0-alpha06'
         version_retrofit = "2.9.0"
         version_retrofit_coroutines_adapter = "0.9.2"
+        version_moshi = "1.9.3"
     }
 
     repositories {
@@ -15,7 +16,7 @@ buildscript {
 
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
 
